# password-manager

./: CMakeLists.txt  README.md
hello-world/: CMakeLists.txt  helloworld.cpp
manager/: CMakeLists.txt  file_ops.cpp  file_ops.h  main.cpp  map_ops.cpp  map_ops.h  scramble.cpp  substitutions.cpp  substitutions.h  test.cpp  validate_inputs.cpp  validate_inputs.h
necessary-files/: key.txt  storage.txt
